--- a/Hello.html
+++ b/Hello.html
@@ -1,17 +1,21 @@
-<!!doctype html>
+<!doctype html>
+
 <html>
 	<head>
+
 		<meta charset="utf-8">
 		<title> Formation Git </title>	
-		<link type="text/css" href="style.css" >
+		
+		<link rel="stylesheet" type="text/css" href="style.css">
+
 	</head>
 	
 	<body>
+
 		<!-- TITRE -->
-		<div>
-			Bievenur dans cette formation GIT		
-		</div>
-	
+		<div id="top-banner">
+			Bievenue dans cette formation GIT		
+		</div>	
 	
 	</body>
 </html>
