--- a/Hello.html
+++ b/Hello.html
@@ -5,7 +5,7 @@
 
 		<meta charset="utf-8">
 		<title> Formation Git </title>	
-		
+
 		<link rel="stylesheet" type="text/css" href="style.css">
 
 	</head>
@@ -16,6 +16,10 @@
 		<div id="top-banner">
 			Bievenue dans cette formation GIT		
 		</div>	
+
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+		</p>
 	
 	</body>
 </html>
