Ajout d'un gist

--- a/Hello.html
+++ b/Hello.html
@@ -12,14 +12,33 @@
 	
 	<body>
 
-		<!-- TITRE -->
+				<!-- TITRE -->
 		<div id="top-banner">
 			Bievenue dans cette formation GIT		
 		</div>	
 
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-		</p>
+		<!--Ma description-->
+		<div>
+			<h1>Ma description</h1>
+			<p>Bonjour, je me nomme sébastien et je suis une formation vidéo</p>
+		</div>
+
+		<!--Mes récompenses-->
+		<div>
+			<h1>Mes récompenses</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+
+		<!--Mon Gist-->
+		<div>
+			<h1>Mon Gist</h1>
+			<script src="https://gist.github.com/sebHache/bbb4b667e31fab60eb568f135c89afcb.js"></script>
+		</div>
 	
 	</body>
 </html>
